--- a/posts/computer-tool/2022-09-25-latex-vscode.qmd
+++ b/posts/computer-tool/2022-09-25-latex-vscode.qmd
@@ -97,7 +97,9 @@ $ tlmgr --version
   ]
 ```
 
+::: {layout="[[-10, 60, -10]]"}
 ![VS Code에 `.tex` 파일을 올렸을 때 (클릭시 확대)](https://raw.githubusercontent.com/anarinsk/lostineconomics_quarto/main/posts/computer-tool/images/vscode-tex.png)
+:::
 
 위 스크린 샷에서 보듯이 `.tex` 파일을 읽으면 확장에 관련 탭이 자동으로 추가된다. 앞서 `settings.json`에 설정한 대로 컴파일 레서피에 "tex to pdf"가 추가되어 있다. 컴파일은 해당 창 상단 오른쪽의 세모 버튼으로 할 수 있으며 PDF 보기는 돋보기 버튼을 누르면 된다. 
 
