--- a/posts/regression/2022-05-28-normality.qmd
+++ b/posts/regression/2022-05-28-normality.qmd
@@ -15,6 +15,7 @@ lightbox: auto
 ## TL; DR 
 
 - 샘플 크기가 충분하면, 통계적 검정 시 정규 분포 가정에 집착하지 말자.  
+- 가설 검정에서 중요한 것은 '표본 (통계량)'의 분포이지 '모집단'의 분포가 아니다! 
 
 ## 정규 분포는 필요한 가정인가? 
 
