--- a/posts/regression/2019-10-25-understanding-regression.qmd
+++ b/posts/regression/2019-10-25-understanding-regression.qmd
@@ -103,7 +103,7 @@ x_1 \beta_1 + \dotsc + x_k \beta_k
 \end{aligned}
 $$   
 
-위의 벡터 스페이스 그림을 다시 한 번 노려보시라. $\beta_i$는 col $\mathbf X$를 구성하는 벡터 $x_i$에 부여되는 가중치를 의미한다. 
+위의 벡터 스페이스 그림을 다시 한 번 노려보시라. $\beta_i$는 col $\mathbf X$를 구성하는 벡터 $x_i$에 부여되는 선형 결합의 가중치를 의미한다. 
 
 ## $\rm R^2$은 피타고라스 정리의 용용
 
