--- a/posts/regression/2019-11-10-understanding-logit-regression.qmd
+++ b/posts/regression/2019-11-10-understanding-logit-regression.qmd
@@ -10,20 +10,20 @@ categories: [regression]
 
 ## TL; DR
 
-- 로짓 회귀는 우리가 알던 그 '회귀'와는 조금 다르다. 
+- 로짓 회귀는 우리가 알던 그 '회귀'와 다르다! 
 - 로짓 회귀는 아래와 같은 데이터 모형에 기반을 둔 추정법이다. 
 
  $$
  \ln \dfrac{p(\boldsymbol{x_i})}{1-p(\boldsymbol{x_i})} =\boldsymbol{x_i}\boldsymbol{\beta} 
  $$
  
- - 회귀식의 계수 $\boldsymbol{\beta}$를 해석할 때 주의하자. 이를 통상적인 회귀분석의 계수(한계 효과)처럼 해석하려면 별도의 계산이 필요하다. 
+ - 회귀식의 계수 $\boldsymbol{\beta}$를 해석할 때 주의하자. 이를 통상적인 회귀 분석의 계수(한계 효과)처럼 해석하려면 별도의 계산이 필요하다. 
 
 ## 로짓 회귀, 제대로 알고 있나? 
 
-잘 알고 있다고 여기고 있지만 사실 잘 모르는 것이 있다. 로지스틱 회귀(logistic regression) 혹은 로짓 회귀가 그렇지 않을까? 요즘 기계 학습을 배우게 되면, 로짓 회귀는 첫 챕터에서그냥 쓱 지나치기 쉽다. 뒤에 소개될 랜덤 포레스트, SVM, 뉴럴넷 등이 더 진보된 방법으로 보이기 때문이다. 
+요즘 기계 학습을 배우게 되면, 로짓 회귀는 첫 챕터에서 그냥 쓱 지나치기 쉽다. 이어 등장하는 랜덤 포레스트, SVM, 뉴럴넷 등이 더 진보된 방법으로 보이기 때문이다. 
 
-로짓 회귀는 단순하면서도 강력한 방법이다. 필자는 분류(classification)의 문제에 접근할 때 로짓 회귀를 먼저 해볼 것을 권한다. 로짓 회귀에서 '견적'이 나오면 그 질문 혹은 문제는 더 흥미로운 형태로 진화할 가능성이 높다. 반면 로짓 회귀에서 싹수가 없으면 더 복잡한 고급 방법도 소용이 없는 경우가 많다. 요컨대 로짓 회귀는 시간 낭비를 막는 일종의 '맛보기'로서 유용하다. 
+로짓 회귀는 단순하면서도 강력한 방법이다. 나는 분류(classification)의 문제에 접근할 때 로짓 회귀를 먼저 해본다. 로짓 회귀에서 '견적'이 나오면 그 질문 혹은 문제는 더 흥미로운 형태로 진화할 가능성이 높다. 반면 로짓 회귀에서 싹수가 없으면 더 복잡한 고급 방법도 소용이 없는 경우가 많다. 요컨대 로짓 회귀는 시간 낭비를 막는 일종의 '맛보기'로서도 유용하다. 
 
 ## 로짓 함수는 어떻게 등장하나? 
 
@@ -53,11 +53,14 @@ categories: [regression]
 
 ### 어떤 경우 OLS는 곤란한가? 
 
-![로지스틱 리그레션이 필요한 순간](https://miro.medium.com/max/1280/0*gKOV65tvGfY8SMem.png){.my-figure7}
+::: {layout="[[-10, 80, -10]]"}
+![로지스틱 리그레션이 필요한 순간](https://miro.medium.com/max/1280/0*gKOV65tvGfY8SMem.png)
+:::
 
-<br>
-독립 변수가 하나인 모형을 가정하고 위의 그림을 보자. 종속 변수가 0, 1인 상태로 그대로 회귀분석을 하면 그림의 왼쪽 같이 된다. 회귀식의 기울기를 구할 수 있으니 된 것 아니냐? 아니다. 
-앞서 0과 1은 값 그 자체로 의미를 지니지 않는다고 말했다. 그런데 이를 그대로 값으로 바꿔서 회귀분석을 해도 좋은 것일까? 그러기에는 어딘가 찜찜하다. 게다가 $x$ 값에 따라서 회귀식의 예측치가 $[0,1]$을 벗어날 수 있다. 임의로 계단 함수를 다시 얹어서 OLS(통상적인 최소자승법이라는 의미에서 Ordinary Least Squares라고 흔히 부른다)를 구제할 수도 있겠다. 즉, 
+독립 변수가 하나인 모형을 가정하고 위의 그림을 보자. 종속 변수가 0, 1인 상태로 그대로 회귀 분석을 하면 그림의 왼쪽 같이 된다. 회귀식의 기울기를 구할 수 있으니 된 것 아니냐? 아니다. 
+앞서 0과 1은 값 그 자체로 의미를 지니지 않는다고 말했다. 그런데 이를 그대로 값으로 바꿔서 회귀 분석을 해도 좋은 것일까? 그러기에는 어딘가 찜찜하다. 
+
+게다가 $x$ 값에 따라서 회귀식의 예측치가 $[0,1]$을 벗어날 수 있다. 임의로 계단 함수를 다시 얹어서 OLS(통상적인 최소자승법이라는 의미에서 Ordinary Least Squares라고 흔히 부른다)를 구제할 수도 있겠다. 즉, 
 
 $$
 s(\beta x) = 
@@ -71,7 +74,7 @@ $$
 
 ### 범주형에서 확률로 
 
-앞서 0 또는 1의 문제가 범주형의 문제라고 했다. 따라서 0, 1은 값 자체로는 아무 의미를 지니지 않는다. 회귀분석의 종속 변수가 실수값을 지닐 때 분석으로서 의미를 지닌다. 그렇다면 그렇게 바뀌보면 어떨까. 범주형 변수가 결국 상태를 나타내는 것이라면 1이라는 상태를 지닐 '확률'을 추정하는 문제로 바꿔 생각해볼 수 있겠다. 즉, 
+앞서 0 또는 1의 문제가 범주형의 문제라고 했다. 따라서 0, 1은 값 자체로는 아무 의미를 지니지 않는다. 회귀 분석의 종속 변수가 실수값을 지닐 때 분석으로서 의미를 지닌다. 그렇다면 그렇게 바뀌보면 어떨까. 범주형 변수가 결국 상태를 나타내는 것이라면 1이라는 상태를 지닐 '확률'을 추정하는 문제로 바꿔 생각해볼 수 있겠다. 즉, 
 
 $$
 p(y_i = 1 | \boldsymbol{x_i}) = p(\boldsymbol{x_i}) 
@@ -104,9 +107,9 @@ $$
 $$
 
 
-애석하지만 이 식은 우리에게 주어진 자료로는 추정할 수 없다. 당장 좌변의 종속 변수를 얻으려면 관찰별로 확률값을 알아야 하는데 우리에게 주어진 관찰 값은 0 또는 1 뿐이다. 따라서 위의 식은 선형 회귀와 유사한 모형을 적용할 수 있는 방법을 찾은 것일 뿐 실제로 추정할 수 있는 식이 아니다. $\boldsymbol{\beta}$는 어떻게 구해야 할까? 
+애석하지만 이 식은 우리에게 주어진 자료로는 추정할 수 없다. 당장 좌변의 종속 변수를 얻으려면 확률 함수를 알아야 하는데 이는 미리 알 수 없는 분포를 안다는 뜻이다. 따라서 위의 식은 선형 회귀와 유사한 모형을 적용할 수 있는 방법을 고안한 것일 뿐 실제로 추정할 수 있는 식이 아니다. 그렇다면, $\boldsymbol{\beta}$는 어떻게 구해야 할까? 
 
-이를 보기 전에 추정 모형에서 로지스틱 함수를 찾아보자. 위의 식에서 $p(x_i)$를 구해보자. 
+이 문제를 살펴 보기 전에 위의 모형에서 로지스틱 함수를 찾아보자. 위의 식에서 $p(x_i)$를 구해보자. 
 
 $$
 \begin{aligned}
@@ -121,7 +124,7 @@ $$
 
 ## Link function 
 
-말이 나온 김에 링크 함수에 대해서 살펴보고 가자. 위에서 보듯이, 사실 회귀 분석이란 실수의 범위를 지니는 좌변을 역시 변수의 선형결합을 통해 이루어진 우변으로 설명하려는 것이다. 그런데 만일 좌변의 영역이 실수 전체가 아니라면? 예를 들면 아래와 같다. 
+말이 나온 김에 "링크 함수"를 한번 보고 가자. 위에서 보듯이, 사실 회귀 분석이란 실수의 범위를 지니는 좌변을 역시 변수의 선형결합을 통해 이루어진 우변으로 설명하려는 것이다. 그런데 만일 좌변의 영역이 실수 전체가 아니라면? 예를 들면 아래와 같다. 
 
 - 절단 자료 (truncated): 지속 시간의 경우 0보다 큰 실수가 된다. 
 - 범주형 자료: 이 경우는 수로 표현하려면 적절한 변형이 필요하다. 
@@ -153,7 +156,7 @@ $$
 
 이는 평균 함수(mean function)이라고 부른다. 로짓 회귀의 경우는 이산 변수를 활용하기 때문에 확률 질량 함수가 곧 확률이 된다는 점을 기억해두자. 
 
-### Three steps 
+### 삼단계 
 
 위 과정이 세 가지 단계를 거쳤다는 점을 쉽게 알 수 있을 것이다. 
 
@@ -174,13 +177,13 @@ $\hat{\boldsymbol \beta}$은 어떻게 구할 수 있을까? 현재까지 우리
 1. 종속 변수의 관찰값은 0 또는 1이다. 
 2. 로짓 함수를 통해서 독립 변수를 해당 관찰의 확률과 연결시킬 수 있게 되었다. 
 
-어차피 종속 변수를 실수로 바꿀 수 없는 이상 우리가 아는 선형 회귀분석을 쓸 수는 없다. 그래서 이름과 달리 우리가 아는 '회귀분석', 즉 OLS를 여기서 쓸 수는 없다. 미안하다. 앞에서 거짓말 했다. 
+어차피 종속 변수를 실수로 바꿀 수 없는 이상 우리가 아는 선형 회귀 분석을 쓸 수는 없다. 그래서 이름과 달리 우리가 아는 '회귀 분석', 즉 OLS를 여기서 쓸 수는 없다. 미안하다. 앞에서 거짓말 했다. 
 
 $$
 \ln \dfrac{p(\boldsymbol{x_i})}{1-p(\boldsymbol{x_i})} = \underset{1 \times k}{\phantom{\boldsymbol{\beta}}\boldsymbol{x_i}\phantom{\boldsymbol{\beta}}}\underset{k \times 1}{\boldsymbol{\beta}}, ~k = 1,  2, \dotsc, n
 $$
 
-애초에 $\boldsymbol \beta$을 알고 있어야, 이 식으로부터 $p(\cdot)$을 구해낼 수 있다. 그런데 우리가 아는 회귀분석이란 $y$와 $\boldsymbol{\rm X}$가 주어졌을 때 하는 것 아닌가? 회귀분석의 좌변이 없기에 OLS로는 추정할 수 없다. 
+애초에 $\boldsymbol \beta$을 알고 있어야, 이 식으로부터 $p(\cdot)$을 구해낼 수 있다. 그런데 우리가 아는 회귀 분석이란 $y$와 $\boldsymbol{\rm X}$가 주어졌을 때 하는 것 아닌가? 회귀 분석의 좌변이 없기에 OLS로는 추정할 수 없다. 
 
 그래서 로짓 회귀는 이름과 달리 $\boldsymbol{\beta}$의 추정치 $\hat{\boldsymbol\beta}$를 구하는데 OLS의 방법을 쓰지 않는다. 로짓 회귀에서는 어떻게  $\hat{\boldsymbol\beta}$를 얻는 것일까? 
 
