--- a/posts/regression/2019-10-25-understanding-regression.qmd
+++ b/posts/regression/2019-10-25-understanding-regression.qmd
@@ -43,7 +43,7 @@ $$
 :::
 
 ::: {layout="[[-20, 60, -20]]"}
-![독립변수 1개인 회귀 분석](https://github.com/anarinsk/lie-regression/blob/master/assets/imgs/simpe_reg.png?raw=true){.my-figure5}
+![독립변수 1개인 회귀 분석](https://github.com/anarinsk/lie-regression/blob/master/assets/imgs/simpe_reg.png?raw=true)
 :::
 
 위 그림은 1개의 regressor가 존재할 때 이것과 regressand를 그대로 2차원 평면에 관찰 수만큼 찍은 것이다. 첫번째 그림에서 "Observed Y"는 점 하나가 $n$ 개의 regressand를 모두 포괄한다. $\mathbf{Y} \in {\mathbb R}^{n}$ 벡터, 즉 $n$ 차원 벡터이고, 이것이 회귀식 좌변의 관찰값 $n$ 개를 표현한다. 
@@ -53,7 +53,7 @@ $$
 이렇게 생각하면 좋겠다. $x_i \in {\mathbb R}^{n}$ 벡터가 $k(<n)$ 개 있다고 하자. 이는 $n$ 보다 차원이 낮기 때문에 기하학적으로는 $n$ 차원 공간에서 초평면(hyperplane)으로 나타날 것이다. 위 그림에서 컬럼 스페이스가 평면으로 표현되는 것은 이러한 취지다. 3차원 벡터의 열 공간이 생성하는 초평면을 예시하면 아래와 같다. 
 
 ::: {layout="[[-20, 60, -20]]"}
-![2차원 컬럼 스페이스](https://miro.medium.com/max/2240/1*VUmUxo3G2UTugIiZ26Pusw@2x.jpeg){.my-figure5}
+![2차원 컬럼 스페이스](https://miro.medium.com/max/2240/1*VUmUxo3G2UTugIiZ26Pusw@2x.jpeg)
 :::
 
 col $\mathbf X$의 최대 차원, 즉 $\mathbf X$의 랭크(위수)는 무엇일까? 회귀 분석에서는 대체로 $n > k$가 일반적이고 이런 상황에서 $\mathbf X$의 랭크는 $k$를 넘을 수 없다. 다시 말하면, $\mathbf X$가 생성하는(span)하는 컬럼 스페이스의 차원의 크기가 $k$를 넘을 수 없다. 그리고 잘 된 회귀 분석이라면 ${\rm rank}(\mathbf X) = k$를 만족한다. 
