--- a/posts/regression/2019-11-10-understanding-logit-regression.qmd
+++ b/posts/regression/2019-11-10-understanding-logit-regression.qmd
@@ -24,13 +24,11 @@ lightbox: auto
 
 ## 로짓 회귀, 제대로 알고 있나? 
 
-요즘 기계 학습을 배우게 되면, 로짓 회귀는 첫 챕터에서 그냥 쓱 지나치기 쉽다. 이어 등장하는 랜덤 포레스트, SVM, 뉴럴넷 등이 더 진보된 방법으로 보이기 때문이다. 
-
-로짓 회귀는 단순하면서도 강력한 방법이다. 나는 분류(classification)의 문제에 접근할 때 로짓 회귀를 먼저 해본다. 로짓 회귀에서 '견적'이 나오면 그 질문 혹은 문제는 더 흥미로운 형태로 진화할 가능성이 높다. 반면 로짓 회귀에서 싹수가 없으면 더 복잡한 고급 방법도 소용이 없는 경우가 많다. 요컨대 로짓 회귀는 시간 낭비를 막는 일종의 '맛보기'로서도 유용하다. 
+기계 학습을 배우게 되면, 로짓 회귀는 첫 챕터에서 그냥 쓱 지나치기 쉽다. 이어 등장하는 랜덤 포레스트, SVM, 뉴럴넷 등이 더 진보된 방법으로 보이기 때문이다. 로짓 회귀는 단순하면서도 강력한 방법이다. 나는 분류(classification)의 문제에 접근할 때 로짓 회귀를 먼저 해본다. 로짓 회귀에서 '견적'이 나오면 그 질문 혹은 문제는 더 흥미로운 형태로 진화할 가능성이 높다. 반면 로짓 회귀에서 싹수가 없으면 더 복잡한 고급 방법도 소용이 없는 경우가 많다. 요컨대 로짓 회귀는 시간 낭비를 막는 일종의 '맛보기'로서도 유용하다. 
 
 ## 로짓 함수는 어떻게 등장하나? 
 
-로짓 회귀는 말 그대로 로지스틱 함수(logistic function)를 활용하는 회귀 분석이라는 뜻이다. 로지스틱 함수는 어디서 어떻게 등장할까? 로짓 회귀의 데이터 형식을 살펴보자. 종속 변수, 반응(response), regressand 등 다양한 형태로 불리는 식의 좌변은 0 또는 1로만 되어 있다. 어떤 상태라면 1, 그렇지 않으면 0이다. 이때 0 또는 1은 값 자체로 의미를 지니지 않는다. 이는 범주형 변수로서 True or False와 같은 이항 변수로 이해하면 좋겠다. 식의 우변에는 통상적인 독립 변수, 예측 변수(predictor)가 등장한다. 
+로짓 회귀는 말 그대로 로지스틱 함수(logistic function)를 활용하는 회귀 분석이라는 뜻이다. 로지스틱 함수는 어디서 어떻게 등장할까? 로짓 회귀의 데이터 형태부터 살펴보자. 종속 변수, 반응(response), regressand 등 다양한 형태로 불리는 식의 좌변은 0 또는 1로만 되어 있다. 어떤 상태라면 1, 그렇지 않으면 0이다. 이때 0 또는 1은 값 자체로 의미를 지니지 않는다. 이는 범주형 변수로서 True or False와 같은 이항 변수로 이해하면 좋겠다. 식의 우변에는 통상적인 독립 변수, 예측 변수(predictor)가 등장한다. 
 
 :::{.column-margin}
 생각난 김에 짬을 내 회귀식에서 좌변과 우변을 지칭하는 용어를 정리해보자. 취향에 맞춰서 쓰되 일관성만 갖추면 되겠다.  
@@ -77,25 +75,25 @@ $$
 
 ### 범주형에서 확률로 
 
-앞서 0 또는 1의 문제가 범주형의 문제라고 했다. 따라서 0, 1은 값 자체로는 아무 의미를 지니지 않는다. 회귀 분석의 종속 변수가 실수값을 지닐 때 분석으로서 의미를 지닌다. 그렇다면 그렇게 바뀌보면 어떨까. 범주형 변수가 결국 상태를 나타내는 것이라면 1이라는 상태를 지닐 '확률'을 추정하는 문제로 바꿔 생각해볼 수 있겠다. 즉, 
+앞서 0, 1은 값 자체로는 아무 의미를 지니지 않는다고 말했다. 통상적인 회귀 분석의 종속 변수는 실수 형태다. 그렇다면 0, 1을 실수로 바꾸면 어떨까. 범주형 변수가 결국 상태를 나타내는 것이라면 1이라는 상태를 지닐 '확률'을 추정하는 문제로 바꿔 생각해볼 수 있겠다. 즉, 
 
 $$
 p(y_i = 1 | \boldsymbol{x_i}) = p(\boldsymbol{x_i}) 
 $$
 
-그런데 앞서 보았듯이 확률 값을 선형 회귀로 추정하는 데에는 어려움이 있다. 통상적인 회귀 모형의 특성을 유지하면서도 확률 값을 [0,1] 사이에 '잘' 떨궈야 하기 때문이다.
+그런데 앞서 보았듯이 확률 값을 선형 회귀로 추정하는 데에는 어려움이 있다. 통상적인 회귀 모형의 특성을 유지하면서도 확률 값을 [0,1] 사이에 '잘' 떨구는 일이 무척 귀찮다. 식을 아래와 같이 변형해보도록 하자. 
 
 $$
 \dfrac{p(\boldsymbol{x_i})}{1-p(\boldsymbol{x_i})}
 $$
 
-독립 변수를 이렇게 바꾸면 우선 가능한 값의 범위가 $[0, \infty)$로 확장된다. 여기서 음수 값을 포괄하는 방법은 없을까? 여기에 자연 로그를 적용해보자. 
+종속 변수를 이렇게 바꾸면 가능한 값의 범위가 $[0, \infty)$로 확장된다. 여기에 자연 로그를 적용해보자.
 
 $$
 \ln \dfrac{p(\boldsymbol{x_i})}{1-p(\boldsymbol{x_i})}
 $$
 
-이렇게 되면 가능한 값의 범위가 $(-\infty, \infty)$가 된다. 독립 변수가 이 형태가 되면 보통의 선형 회귀를 적용해도 좋겠다. 
+이제 가능한 값의 범위가 $(-\infty, \infty)$가 된다. 이제 보통의 선형 회귀를 적용해도 좋겠다. 
 
 즉, 
 
@@ -110,9 +108,9 @@ $$
 $$
 
 
-애석하지만 이 식은 우리에게 주어진 자료로는 추정할 수 없다. 당장 좌변의 종속 변수를 얻으려면 확률 함수를 알아야 하는데 이는 미리 알 수 없는 분포를 안다는 뜻이다. 따라서 위의 식은 선형 회귀와 유사한 모형을 적용할 수 있는 방법을 고안한 것일 뿐 실제로 추정할 수 있는 식이 아니다. 그렇다면, $\boldsymbol{\beta}$는 어떻게 구해야 할까? 
+애석하지만 이 식은 우리에게 주어진 자료로는 추정할 수 없다. 좌변의 종속 변수를 얻으려면 확률 함수를 알아야 하는데 이 녀석은 영원히 미지의 사실이다. 따라서 위의 식은 선형 회귀를 적용할 수 있는 방법을 고안한 것일 뿐 실제로 추정 가능한 식이 아니다. 그렇다면, $\boldsymbol{\beta}$는 어떻게 구해야 할까? 
 
-이 문제를 살펴 보기 전에 위의 모형에서 로지스틱 함수를 찾아보자. 위의 식에서 $p(x_i)$를 구해보자. 
+이 문제를 살펴 보기 전에 위의 모형에서 로지스틱 함수를 발견해보자. 위의 식에서 $p(x_i)$를 구해보자. 
 
 $$
 \begin{aligned}
@@ -167,7 +165,7 @@ $$
 y_i \xrightarrow{\rm prob.~function} \mu_i \xrightarrow{\rm link~function} \eta_i = \boldsymbol x_i \beta
 $$ 
 
-원래 관찰값 $y_i$는 모형에 관한 가정을 통해서 확률 (질량/밀도) 함수를 통해 (일종의 확률값) $\mu_i$ 로 변형된다. 이는 다시 연결 함수를 통해서 선형 회귀가 가능한 형태로 변형된다. 
+원래 관찰값 $y_i$는 확률 (질량/밀도) 함수를 통해 $\mu_i$ 로 변형된다. 이는 다시 연결 함수를 통해서 선형 회귀가 가능한 형태로 변형된다. 
 
 :::{.column-margin}
 $y_i$가 어떤 특성을 지니는지에 따라서 다양한 형태의 $\mu_i$가 가능하고, 여기에 적절한 연결 함수를 적용해야 한다. 이는 논의 범위를 벗어난다. [이 글](https://www.stat.cmu.edu/~ryantibs/advmethods/notes/glm.pdf)을 참고하자. 
