--- a/about.qmd
+++ b/about.qmd
@@ -42,3 +42,4 @@ Hi, I'm Junsok Huhh. If you are interested in me, check my c.v. and contact. The
 - [v0](https://lostineconomics.netlify.com/) built with [BlogDown](https://bookdown.org/yihui/blogdown) and [Github Pages](https://pages.github.com/)
 
 🐈 🐈 🐈  일러스트는 [최진영](https://www.instagram.com/jychoioioi/) 작가의 2021년 일력에 실린 작품입니다.
+🐈 🐈 🐈  폰트는 [SUIT](https://sunn.us/suit/), [SUITE](https://sunn.us/suite/), [D2Coding](https://github.com/naver/d2codingfont)의 웹폰트를 사용합니다. 
