--- a/posts/computer-tool/2022-12-22-my-domains.qmd
+++ b/posts/computer-tool/2022-12-22-my-domains.qmd
@@ -13,7 +13,7 @@ draft: false
 
 ## TL; DR
 
-- 도메인과 깃허브 페이지스를 연결하는 법을 알아보자. 
+- 도메인과 깃허브 페이지스를 연결하는 법을 알아보자.  
 
 ### Not in this Post 
 
@@ -22,7 +22,7 @@ draft: false
 
 ### What in this Post 
 
-- 도메인 구입하고 깃헙 페이지스로 연결하는 법  
+- 도메인 구입하고 깃헙 페이지스로 연결하는 방법  
 
 ## 도메인 구입 
 
