--- a/posts/the-books/2023-03-13-스케일의-법칙.qmd
+++ b/posts/the-books/2023-03-13-스케일의-법칙.qmd
@@ -10,36 +10,36 @@ filters:
 lightbox: auto
 draft: false
 ---
-
-::: {layout="[[-20,20,-20]]" layout-valign="bottom"}
+::: {layout="[[35,-5, 60]]"}
+## The Book
 [![](https://image.aladin.co.kr/product/30562/27/cover500/8901266431_1.jpg)](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=305622732)
-:::
 
-
+::::{layout-ncol=1}
 ## TL; DR
-
 - 경제학 혹은 행동 경제학의 기본적인 개념을 응용하기에는 좋다. 
 - 저자의 우버에서의 경험이 '날 것'으로 들어가 있지는 않더라. 
 
 ### Not in this Post 
-
 - 책 내용을 시시콜콜 소개하지 않는다. 
 
 ### What in this Post 
-
 - 꼴리는 대로 쓴 책에 대한 느낌적 느낌 
+::::
+:::
+
+
 
 ## 학술을 다루는 책의 어떤 흐름 
 
-최근 연구자 혹은 학술 분야를 다루는 책들이 지니는 흐름이 있다. 일정한 수준에 오른 대가가 자신의 연구를 집대성하면서 이를 자서전과 비슷하게 쓰는 것이다. 책 중간중간 등장하는 개인사가 중요한 학술적인 성취를 엿보는 창이 되주기도 한다. 이런 형식이 딱딱한 교과서보다는 확실히 재미있고 접근성도 좋다. 이런 포맷의 '시초'라고 할만 한 "괴짜 경제학"의 인기가 낳은 파급 효과일까도 싶다. 
+최근 연구자 혹은 학술 분야를 다루는 책들이 지니는 흐름이 있다. 일정한 수준에 오른 대가가 자신의 연구를 집대성하면서 이를 자서전과 비슷하게 쓰는 것이다. 책 중간중간 등장하는 개인사가 중요한 학술적인 성취를 엿보는 창이 되기도 한다. 이런 형식이 딱딱한 교과서보다는 확실히 재미있고 접근성도 좋다. 이런 포맷의 '시초'라고 할 만한 "괴짜 경제학"의 인기 때문일까도 싶다. 
 
-그런데, 나는 이런 형식이 이제 그리 좋게 보이지 않는다. 읽을 때는 재미있지만 읽고 나면 기억에 남는 것이 별로 없다. 내가 책을 꼼꼼히 읽지 않아서 그렇게 느낄 수도 있다. 교과서를 읽으면 주요 개념 한 두 개 쯤은 챙겨갈 수 있는데, 이런 책은 도통 '재미있더라'는 인상 빼고는 챙길 게 없다. 
+그런데, 나는 이런 형식이 이제 그리 좋게 보이지 않는다. 읽을 때는 재미있지만 읽고 나면 기억에 남는 것이 별로 없다. 내가 책을 꼼꼼히 읽지 않아서 그렇게 느낄 수도 있다. 교과서를 읽으면 주요 개념 한두 개쯤은 챙겨갈 수 있는데, 이런 책은 도통 '재미있더라'는 인상 빼고는 챙길 게 없다. 
 
 ## 존 리스트의 "볼티지 효과"
 
 존 리스트의 "스케일의 법칙"도 이러한 흐름에 속하는 책이다. 저자는 상아탑 경제학자로서는 드물게 기업의 현장 그것도 떠오르는 스타트업에서 네트워크 효과에 올라타 '규모의 경제'를 설계하는 일에 참여했다. 리스트는 매년 노벨 경제학상 후보의 상석에 오를 만큼 아카데미의 업적도 탄탄한 인물이다. 
 
-사실 내가 책에서 기대했던 것은 우버와 리프트의 사업 경험을 보다 내밀하게 "규모의 경제" 혹은 "네트워크 효과"와 연결하는 내용이었다. 규모의 경제를 다루는 많은 책들이 있지만 본질을 제대로 치고 나가는 책은 드물다. 배리안과 샤피로 20년 전에 썼던 책이 여전히 메력적으로 다가온다고 생각하는 편이라서 보다 갱신된 내용이 경제학적으로 잘 다뤄졌으면 싶었다. 
+사실 내가 책에서 기대했던 것은 우버와 리프트의 사업 경험을 보다 내밀하게 "규모의 경제" 혹은 "네트워크 효과"와 연결하는 내용이었다. 규모의 경제를 다루는 많은 책이 있지만 본질을 제대로 치고 나가는 책은 드물다. Varian & Shapiro가 20년 전에 썼던 책이 여전히 메력이라고 생각하고, 보다 갱신된 내용이 경제학적으로 잘 다뤄졌으면 싶었다. 
 
 :::{.column-margin}
 [Information Rules](https://www.amazon.com/Information-Rules-Strategic-Network-Economy/dp/087584863X/); 이 책은 번역서도 있었는데 절판되었다. 
@@ -47,11 +47,11 @@ draft: false
 
 ## 기대와는 달랐다... 
 
-이 책은 관련된 경제학을 꼼꼼하게 다루기보다는 다소 자기계발서 같은 포맷을 취하고 있다. 이론 혹은 실험 결과를 상세하기 소개하기보다는 이를 밑밥으로 깔면서 교훈을 이끌어내는 식이다. 
+이 책은 관련된 경제학을 꼼꼼하게 다루기보다는 다소 자기계발 서 같은 포맷을 취하고 있다. 이론 혹은 실험 결과를 상세하기 소개하기보다는 이를 밑밥으로 깔면서 교훈을 끌어내는 식이다. 
 
-1부에서는 규모의 확장을 가로 막는 5가지 장애물을 소개한다. 행동 경제학, 실험 경제학, 인과 추론, 재현성의 위기에서 다뤄진 내용이 적당하게 버무려져서 소개된다. 2부는 규모 확장을 위해 필요한 경제학의 도구를 소개한다. 인센티브, 한계적 사고, 기회비용의 고려, 문화의 중요성을 다루고 있다.
+1부에서는 규모의 확장을 가로막는 5가지 장애물을 소개한다. 행동 경제학, 실험 경제학, 인과 추론, 재현성의 위기에서 다뤄진 내용이 적당하게 버무려져서 소개된다. 2부는 규모 확장을 위해 필요한 경제학의 도구를 소개한다. 인센티브, 한계적 사고, 기회비용의 고려, 문화의 중요성을 다루고 있다.
 
-나는 2부가 더 실망스러웠다. 우선 리스트 교수의 가르침이라는 게 '경제원론101'의 내용과 크게 다르지 않다. 태양 아래 새로운 것이 없다 하니, 좋은 가르침을 여러 영역에서 확인할 수 있다면 그것으로 족할 수도 있겠다. 새롭다고 인지되는 현상을 먼저 잘 포획하고 이를 기존 경제학의 가르침으로 끌고 오는 방식이면 어땠을까 싶다. 애석하게도 저자는 이런 접근을 취하고 있지는 않더라. 
+나는 2부가 더 실망스러웠다. 우선 리스트 교수의 가르침이라는 게 '경제원론101'의 내용과 크게 다르지 않다. 태양 아래 새로운 것이 없다면 좋은 가르침을 여러 영역에서 확인할 수 있다면, 그것으로 족할 수도 있겠다. 새롭다고 인지되는 현상을 먼저 잘 포획하고 이를 기존 경제학의 가르침으로 끌고 오는 방식이면 어땠을까 싶다. 애석하게도 저자는 이런 접근을 취하고 있지는 않더라. 
 
 저자의 개인사와 관련된 에피소드 역시 경제학을 전공하는 사람이라면 모를까 일반인이 크게 관심을 가질 만한 내용일까 싶다. 우버의 부상과 추락과 관련해서 흥미로운 대목이 더 있었을 것 같은데, 회사와의 경험이 그 정도였기 때문인지 아니면 감추려고 그랬던 것인지, '좋은 게 좋은 것'이라는 식으로 넘어가는 경우가 많았다. 
 
