--- a/posts/the-books/2023-03-13-스케일의-법칙.qmd
+++ b/posts/the-books/2023-03-13-스케일의-법칙.qmd
@@ -31,7 +31,7 @@ draft: false
 
 ## 학술을 다루는 책의 어떤 흐름 
 
-최근 연구자 혹은 학술 분야를 다루는 책들이 지니는 흐름이 있다. 일정한 수준에 오른 대가가 자신의 연구를 집대성하면서 이를 자서전과 비슷하게 쓰는 것이다. 책 중간중간 등장하는 개인사가 중요한 학술적인 성취를 엿보는 창이 되기도 한다. 이런 형식이 딱딱한 교과서보다는 확실히 재미있고 접근성도 좋다. 이런 포맷의 '시초'라고 할 만한 "괴짜 경제학"의 인기 때문일까도 싶다. 
+학술 분야의 대중서가 최근 지니는 특징 같은 것이 하나있다. 일가를 이룬 연구자가 연구를 집대성하면서 반쯤 자서전을 겸하도록 책을 구성한다. 책의 중간중간 등장하는 개인사가 중요한 학술적인 성취를 엿보는 창이 되기도 한다. 이런 형식이 딱딱한 교과서보다는 확실히 재미있고 접근성도 좋다. 이런 포맷의 '시초'라고 할 만한 "괴짜 경제학"의 인기 때문일까도 싶다. 
 
 그런데, 나는 이런 형식이 이제 그리 좋게 보이지 않는다. 읽을 때는 재미있지만 읽고 나면 기억에 남는 것이 별로 없다. 내가 책을 꼼꼼히 읽지 않아서 그렇게 느낄 수도 있다. 교과서를 읽으면 주요 개념 한두 개쯤은 챙겨갈 수 있는데, 이런 책은 도통 '재미있더라'는 인상 빼고는 챙길 게 없다. 
 
