--- a/posts/machine-learning/2022-11-29-shannon-entropy.qmd
+++ b/posts/machine-learning/2022-11-29-shannon-entropy.qmd
@@ -12,7 +12,7 @@ filters:
 lightbox: auto
 ---
 
-## tl; dr
+## TL; DR
 
 - 섀넌의 (정보) 엔트로피에 대해서 궁금했던 것들
 
@@ -20,8 +20,11 @@ lightbox: auto
 
 섀넌의 엔트로피는 일상적으로 쓰고 중요한 개념이지만 정작 그 개념의 핵심이 뭔지 잊을 때가 있다. 내가 지금 그 꼴이고 그래서 정리 삼아서 포스트를 하나 남겨 보겠다. 미리 밝혀두겠다. 섀넌의 엔트로피와 그 역사적 의미 등 대해서는 좋은 책도 많고 구글링을 하면 이 글보다 좋은 자료가 많이 나온다. 이런 부분을 여기서 반복하지는 않겠다. 
 
-## 정의
+:::{.column-margin}
+왜 이 개념을 "엔트로피"라고 불렀을까? 일설에 따르면 섀넌은 '정보', '불확실성'이 적절하지 않다고 느꼈다. 그 때 폰 노이만이 섀넌에게 이 개념을 "엔트로피"라고 불러야 한다고 조언하며 두 가지 이유를 말헀다고 한다. 우선 '셰넌의 엔트로피'가 통계물리학에 이미 있는 개념이고, 그 분야에서 "엔트로피"라고 불리고 있다. 둘째, 이 개념을 제대로 아는 없을 것이기 때문에 논쟁에서 당신이 우위를 점할 수 있다. [츌처](https://mathoverflow.net/questions/403036/john-von-neumanns-remark-on-entropy)
+:::
 
+## 정의
 
 섀넌의 정보 엔트로피 $H(X)$의 정의는 다음과 같다. $X$는 확률 변수라고 하자. $\chi$는 적절한 임의의 가측 집합을 뜻하는데, 일단 넘어가도록 하자.
 
