--- a/posts/git/2020-03-05-using-git-w10.qmd
+++ b/posts/git/2020-03-05-using-git-w10.qmd
@@ -1,6 +1,6 @@
 ---
-title: Using Git ‘Smoothly’ in Windows 10
-description: 윈도 10에서 git 잘 쓰기 
+title: ~~Using Git ‘Smoothly’ in Windows 10~~
+description: 낡은 내용입니다...
 author: "JS HUHH"
 date: "03/05/2020"
 image: "https://t3.ftcdn.net/jpg/03/67/94/46/240_F_367944626_tkPR8g1rZihc0ql5WpJhDYffS3nTfKqP.jpg"
