--- a/posts/math-simple/2022-10-05-paradox-of-friendship.qmd
+++ b/posts/math-simple/2022-10-05-paradox-of-friendship.qmd
@@ -1,6 +1,6 @@
 ---
 title: Paradox of Friendship 
-description:  역설을 수학적으로 들여다보자
+description:  역설을 수학적으로 풀어보자
 author: "JS HUHH"
 date: "10/05/2022"
 image: "https://static01.nyt.com/images/2010/09/19/business/STREAM/STREAM-jumbo.jpg?quality=75&auto=webp"
@@ -14,7 +14,7 @@ lightbox: auto
 
 ## tl; dr
 
-- 친구의 역설을 식으로 풀어보자. 
+- 친구의 역설을 수학적으로 풀어보자. 
 
 ### 친구의 역설 
 
@@ -30,9 +30,10 @@ lightbox: auto
 |엣지(edge)|노드와 노드를 연결하는 선|$E, e$|
 |차수(degree)|엣지의 수|$d(v)$|
 
-$V$를 노드의 집합, $E$를 엣지의 집합하자. 해당 집합에 속하는 대표 원소는 각각 소문자 $v, e$로 표기한다. 특정한 노드 개체 $v$의 차수는 $d(v)$로 나타낼 수 있다. 
+$V$를 노드의 집합, $E$를 엣지의 집합이다. 해당 집합에 속하는 대표 원소는 각각 소문자 $v, e$로 표기한다. 특정한 노드 개체 $v$의 차수는 $d(v)$로 나타낼 수 있다. 
 
-방향성이 없는 그래프는 $G = (V, E)$로 정의한다. 방향성이 없다는 것은 친구 관계가 대칭적임을 뜻한다. 즉, A가 B의 친구라면, B도 A의 친구가 된다. 만일 애정 관계라면 '짝사랑'과 같은 것이 존재할 수 있지만, 일단 친구 관계에서는 그런 관계가 없다고 하자. 
+'방향성이 없는' 그래프는 $G = (V, E)$로 정의한다. 방향성이 없다는 것은 친구 관계가 대칭적임을 뜻한다. 즉, A가 B의 친구라면, B도 A의 친구가 된다. 만일 애정 관계라면 '짝사랑'과 같은 것이 존재할 수 있지만, 일단 친구 관계에서는 그런 관계가 없다고 하자. 
+
 
 ### '평균' 친구 숫자 
 
