--- a/posts/computer-tool/2020-03-09-Streamlit-Heroku.qmd
+++ b/posts/computer-tool/2020-03-09-Streamlit-Heroku.qmd
@@ -1,9 +1,9 @@
 ---
 title:  ~~Streamlit + Heroku~~
-description: 낡은 내용입니다...
+description: 이제는 쓰지 않는 낡은 내용입니다...
 author: "JS HUHH"
 date: "03/09/2020"
-image: "https://t3.ftcdn.net/jpg/03/67/94/46/240_F_367944626_tkPR8g1rZihc0ql5WpJhDYffS3nTfKqP.jpg"
+image: "https://cdn.theatlantic.com/media/mt/food/assets_c/2012/01/Expired-SS-Post-thumb-615x300-74166.jpg"
 categories: [computer-tool]
 #margin-header: subscribe.html
 ---
