--- a/project.qmd
+++ b/project.qmd
@@ -7,7 +7,7 @@ about:
 ---
 ### Mostly Useless
 
-대부분 쓸모 없는 개인 프로젝트 저장소입니다. 역시 뭐라도 도움이 될 수 있다면 저는 기쁩니다. 
+대부분 쓸모 없는 개인 프로젝트 저장소입니다. 역시 뭐라도 도움이 될 수 있다면 저는 기쁠 따름!
 
 ---
 
@@ -34,6 +34,13 @@ Quarto의 PT는 Revealjs를 붙일 수 있습니다. 다음과 같은 점에서 
 - html로 구성되어 있어서 웹 브라우저 이외에 별도의 소프트웨어가 필요하지 않습니다. 
 - GitHub Pages를 통해서 퍼블리시할 수 있습니다. 
 - 이런 저런 디자인 지옥에 고통받지 않을 수 있습니다! 
+
+### Generating CV in GitHub 
+
+- Oputput: [short CV](https://anarinsk.github.io/markdown-cv)
+- Post: [LINK](https://www.lostineconomics.com/posts/computer-tool/2022-05-10-how-to-make-cv.html)
+
+깃허브에서 markdown 및 Pages 기능을 활용해 자동으로 CV를 생성하고 퍼브리시하는 내용입니다. 아직 100% 만족스럽지 않지만 게으르게 쓸만한 내용 정도는 됩니다. 
 
 </br>
 🐈 🐈 🐈  일러스트는 Arthur B. Frost가 Lewis Carroll의 [The Three Voices Poem](https://classic-literature.co.uk/lewis-carroll-the-three-voices-poem/)을 위해 그린 삽화입니다. 
