--- a/project.qmd
+++ b/project.qmd
@@ -15,32 +15,32 @@ about:
 
 - Ouput: [Anari's Economic Indices](https://eis.anari.dev/)
 
-개인적으로 보려고 만든 경제 지표 보드입니다. 고급스럽게 웹 개발을 하면 좋았겠지만 부족한 지식과 시간과 타협한 산물입니다. 
+개인적으로 보려고 만든 경제 지표 보드입니다. 고급스럽게 웹 개발을 하면 좋았겠지만 초보적인 웹 지식과 pyscript 약간 활용했습니다. 부족한 지식 및 시간과 타협한 졸작입니다. 
 
 ### JupyterLite
 
 - Ouput: [Customized JupyterLite](https://jupyterlite.anari.dev/)
 - Post: [LINK](https://www.lostineconomics.com/posts/computer-tool/2022-12-06-jupyterlite-githubpages.html)
 
-JupyterLite는 Wasm(웹 어셈블리)로 구현되는 경량화된 쥬피터IDE + Python 구동 방식입니다. 파이썬 코딩 경험이 말할 수 없이 편리해집니다! 
+JupyterLite는 Wasm(웹 어셈블리)로 구현되는 경량화된 쥬피터IDE + Python 개발 환경입니다. 사용성에 제한이 있지만 파이썬 코딩 경험이 말할 수 없이 빨리지고 편리해집니다! 
 
-### Presentation with Quarto & Revealjs 
+### Presentation with Quarto & Reveal.js 
 
 - Ouput: [Fun PT](https://fun-pt.lostineconomics.com/)
 - Post: [LINK](https://www.lostineconomics.com/posts/computer-tool/2022-07-07-pt-with-quarto.html)
 
-Quarto의 PT는 Revealjs를 붙일 수 있습니다. 다음과 같은 점에서 장점이 있습니다. 
+Quarto는 Reveal.js를 부릴 수 있습니다. Quarto를 이용한 PT 제작에는 다음과 같은 점에서 좋습니다. 
 
 - html로 구성되어 있어서 웹 브라우저 이외에 별도의 소프트웨어가 필요하지 않습니다. 
 - GitHub Pages를 통해서 퍼블리시할 수 있습니다. 
-- 이런 저런 디자인 지옥에 고통받지 않을 수 있습니다! 
+- 이런 저런 '디자인 지옥'에 고통받지 않을 수 있습니다! 
 
 ### Generating CV in GitHub 
 
 - Oputput: [short CV](https://anarinsk.github.io/markdown-cv)
 - Post: [LINK](https://www.lostineconomics.com/posts/computer-tool/2022-05-10-how-to-make-cv.html)
 
-깃허브에서 markdown 및 Pages 기능을 활용해 자동으로 CV를 생성하고 퍼브리시하는 내용입니다. 아직 100% 만족스럽지 않지만 게으르게 쓸만한 내용 정도는 됩니다. 
+깃허브의 markdown과 Pages 기능을 활용해 자동으로 CV를 생성하고 웹으로 배포할 수 있습니다. 아직 100% 만족스럽지 않지만 게으르게 쓸만한 할 정도 됩니다. 
 
 </br>
 🐈 🐈 🐈  일러스트는 Arthur B. Frost가 Lewis Carroll의 [The Three Voices Poem](https://classic-literature.co.uk/lewis-carroll-the-three-voices-poem/)을 위해 그린 삽화입니다. 
