--- a/project.qmd
+++ b/project.qmd
@@ -27,7 +27,7 @@ JupyterLite는 Wasm(웹 어셈블리)로 구현되는 경량화된 쥬피터IDE 
 
 ⛧ Ouput: [Fun PT](https://fun-pt.lostineconomics.com/) | Post: [LINK](https://www.lostineconomics.com/posts/computer-tool/2022-07-07-pt-with-quarto.html)
 
-Quarto는 Reveal.js를 부릴 수 있습니다. Quarto를 이용한 PT 제작에는 다음과 같은 점에서 좋습니다. 
+Quarto는 Reveal.js를 부릴 수 있습니다. Quarto를 이용한 PT 제작에는 다음과 같은 장점이 있습니다.  
 
 - html로 구성되어 있어서 웹 브라우저 이외에 별도의 소프트웨어가 필요하지 않습니다. 
 - GitHub Pages를 통해서 퍼블리시할 수 있습니다. 
