--- a/posts/computer-tool/2022-08-13-clean-use-of-windows.qmd
+++ b/posts/computer-tool/2022-08-13-clean-use-of-windows.qmd
@@ -3,7 +3,7 @@ title: 단순하고 깔끔한 윈도 분석 환경
 description: winget으로 일관되게 쓰자   
 author: "JS HUHH"
 date: "08/13/2022"
-image: "https://www.phxid.com/wp-content/uploads/common-window-size.jpg"
+image: "images/windws-2.jfif"
 categories: [computer-tool]
 draft: false
 filters:
