--- a/posts/container/2022-04-26-k8s-personally.qmd
+++ b/posts/container/2022-04-26-k8s-personally.qmd
@@ -3,7 +3,7 @@ title:  Kubernetes As an Alternative to Docker
 description: Docker의 대안으로 K8s를 써보자! 
 author: "JS HUHH"
 date: "04/26/2022"
-image: "https://cdn.mos.cms.futurecdn.net/mfEr7wNtjVMVx2vvSXdErC-1024-80.jpg.webp"
+image: "images/container.jfif"
 draft: false
 categories: [container]
 #margin-header: subscribe.html
