--- a/posts/computer-tool/2022-09-25-latex-vscode.qmd
+++ b/posts/computer-tool/2022-09-25-latex-vscode.qmd
@@ -3,7 +3,7 @@ title: $\rm\LaTeX$ + VS Code
 description: Tiny$\rm\TeX$으로 모든 OS에서 쉽게!
 author: "JS HUHH"
 date: "09/25/2022"
-image: "images/type_cat.jfif"
+image: "images/type_cat_2.jfif"
 categories: [computer-tool]
 filters:
    - lightbox
